--- a/index.ipynb
+++ b/index.ipynb
@@ -68,38 +68,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Function to add two numbers \n",
     "def add(num1, num2):\n",
-    "    #Perform the calculation\n",
-    "    return None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Function to subtract two numbers \n",
-    "def subtract(num1, num2):\n",
-    "    #Perform the calculation\n",
-    "    return None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Function to multiply two numbers\n",
-    "def multiply(num1, num2):\n",
-    "    #Perform the calculation\n",
-    "    return None"
+    "    return num1 + num2"
    ]
   },
   {
@@ -108,10 +83,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Function to subtract two numbers \n",
+    "def subtract(num1, num2):\n",
+    "    return num1 - num2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to multiply two numbers\n",
+    "def multiply(num1, num2):\n",
+    "    return num1 * num2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Function to divide two numbers\n",
     "def divide(num1, num2):\n",
-    "    #Perform the calculation\n",
-    "    return None"
+    "    return num1 / num2"
    ]
   },
   {
@@ -124,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -137,25 +133,56 @@
       "3. Multiply\n",
       "4. Divide\n",
       "\n",
-      "Select operations form 1, 2, 3, 4 :1\n",
-      "Enter first number: 2\n",
-      "Enter second number: 3\n",
-      "2 + 3 = 5\n"
+      "Please select operations from 1, 2, 3, 4 :2\n",
+      "Enter first number: \n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-f4d506bcd55b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mselect\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Please select operations from 1, 2, 3, 4 :\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mnumber_1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Enter first number: \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0mnumber_2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Enter second number: \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
      ]
     }
    ],
    "source": [
     "# Print user menu \n",
-    "\n",
+    "print(\"Please select operation -\\n\" \\\n",
+    "        \"1. Add\\n\" \\\n",
+    "        \"2. Subtract\\n\" \\\n",
+    "        \"3. Multiply\\n\" \\\n",
+    "        \"4. Divide\\n\")\n",
     "\n",
     "# Take input from the user for operation , followed by numbers. \n",
-    "\n",
+    "select = input(\"Please select operations from 1, 2, 3, 4 :\")\n",
+    " \n",
+    "number_1 = int(input(\"Enter first number: \"))\n",
+    "number_2 = int(input(\"Enter second number: \"))\n",
     "\n",
     "# Based on operation, pass the two numbers to respective function\n",
     "# Print the output in a nice manner\n",
     "# Print \"Invalid input\" if an unexpected character is seen in input\n",
-    "\n",
-    "\n",
+    "if select == '1':\n",
+    "    print(number_1, \"+\", number_2, \"=\",\n",
+    "                    add(number_1, number_2))\n",
+    " \n",
+    "elif select == '2':\n",
+    "    print(number_1, \"-\", number_2, \"=\",\n",
+    "                    subtract(number_1, number_2))\n",
+    " \n",
+    "elif select == '3':\n",
+    "    print(number_1, \"*\", number_2, \"=\",\n",
+    "                    multiply(number_1, number_2))\n",
+    " \n",
+    "elif select == '4':\n",
+    "    print(number_1, \"/\", number_2, \"=\",\n",
+    "                    divide(number_1, number_2))\n",
+    "else:\n",
+    "    print(\"Invalid input\")\n",
     "# Expected output    \n",
     "\n",
     "# Please select operation -\n",
@@ -174,7 +201,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Bring in the While loop\n",
+    "#### 3## Bring in the While loop\n",
     "\n",
     "We can see how the logic set by using if-else statements, along with functions can be used to control the flow of the program in an easy way. Let's add more functionality to our calculator as below:\n",
     "\n",
@@ -204,18 +231,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Select operations form 1, 2, 3, 4 :2\n",
+      "Enter first number: 5\n",
+      "Enter second number: 4\n",
+      "5 - 4 = 1\n",
+      "Continue? y/n:y\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize the code with cont (continue) flag set to yes (y)\n",
+    "cont = 'y'\n",
     "\n",
+    "# Check for user input after each iteration of the code\n",
+    "while cont == 'y':\n",
     "\n",
-    "# Check for user input after each iteration of the code in a while loop\n",
-    "\n",
-    "\n",
-    "        # Enclose the I/O  code block inside the while loop\n",
+    "        # Run the code block as above\n",
     "        \n",
+    "        select = input(\"Select operations form 1, 2, 3, 4 :\")\n",
+    "     \n",
+    "        number_1 = int(input(\"Enter first number: \"))\n",
+    "        number_2 = int(input(\"Enter second number: \"))\n",
+    " \n",
+    "        if select == '1':\n",
+    "            print(number_1, \"+\", number_2, \"=\",\n",
+    "                    add(number_1, number_2))\n",
+    " \n",
+    "        elif select == '2':\n",
+    "            print(number_1, \"-\", number_2, \"=\",\n",
+    "                    subtract(number_1, number_2))\n",
+    " \n",
+    "        elif select == '3':\n",
+    "            print(number_1, \"*\", number_2, \"=\",\n",
+    "                    multiply(number_1, number_2))\n",
+    " \n",
+    "        elif select == '4':\n",
+    "            print(number_1, \"/\", number_2, \"=\",\n",
+    "                    divide(number_1, number_2))\n",
+    "            \n",
+    "        # Prompt user for input if he/she wants to repeat \n",
+    "        \n",
+    "        cont = input(\"Continue? y/n:\")\n",
+    "        if cont == \"n\":\n",
+    "            break\n",
+    "\n",
     "\n",
     "\n",
     "#Expected output format\n",
@@ -281,7 +347,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
